# EPP_Final

./: .pre-commit-config.yaml  .pytask.sqlite3  EPP_Gmm.ipynb  EPP_P.ipynb  README.md  Tryla.csv  environment.yml  plot.ipynb  pyproject.toml  setup.cfg
paper/: epp_final.tex  epp_final_pres.tex  task_paper.py
src/: another_params_comparison_exp.html
src/epp_final/: config.py
src/epp_final/analysis/: NLS.py  mini_dist.py  task_analysis.py
src/epp_final/data_management/: __init__.py  clean_data.py  task_data_management.py
src/epp_final/final/: __init__.py  plot.py  task_final.py
tests/analysis/: test_model.py  test_predict.py
tests/data_management/: test_clean_data.py
